<resources>
    <string name="app_name">RBAdmin</string>
    <string name="destination">Destination</string>
    <string name="ordered_on">Ordered on</string>
    <string name="order_details">Order Details</string>
    <string name="delivery_fee">Delivery fee</string>
    <string name="order_contents">Order Contents</string>
    <string name="order_summary">Order Summary</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="logo">logo</string>
    <string name="deliver">Deliver</string>
    <string name="delivery_done">Delivery Done</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="create_your_account">Create your account</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="register">Register</string>
    <string name="make_sure_that_the_password_is_6_characters_long">Make sure that the password is 6 characters long</string>
    <string name="done">Done</string>
    <string name="enter_reason">Enter reason</string>
    <string name="log_out">Log out</string>
    <string name="category">Category</string>
    <string name="delivery_status">Delivery Status</string>
</resources>
