<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="Register">

    <TextView
        android:id="@+id/signInLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/common_signin_button_text"
        android:textSize="20sp"
        android:textColor="@color/red_300"
        android:textStyle="bold"
        android:padding="10dp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:text="@string/create_your_account"
        android:textAlignment="center"
        android:textColor="@color/red_300"
        android:textStyle="bold"
        android:textSize="35sp"/>


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_layout"
        android:inputType="textEmailAddress"
        android:elevation="5dp"
        android:layout_below="@id/text"
        android:padding="10dp"
        android:hint="@string/email_address"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_layout"
        android:elevation="5dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/email"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_layout"
        android:elevation="5dp"
        android:inputType="textPassword"
        android:hint="@string/re_enter_password"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/password"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="10dp"
        android:background="@drawable/btn_rounded_red"
        android:textColor="@android:color/white"
        android:text="@string/register"
        android:layout_below="@id/repassword"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_sure_that_the_password_is_6_characters_long"
        android:layout_below="@id/registerBtn"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>