<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Login">

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textColor="@color/red_300"
        android:textStyle="bold"
        android:padding="10dp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:text="@string/log_in"
        android:textColor="@color/red_300"
        android:textStyle="bold"
        android:textSize="35sp"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="230dp"
        android:layout_marginBottom="15dp"
        android:transitionName="logo"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_layout"
        android:inputType="textEmailAddress"
        android:elevation="5dp"
        android:hint="@string/email_address"
        android:layout_below="@id/logo"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/rounded_layout"
        android:elevation="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/email"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="10dp"
        android:background="@drawable/btn_rounded_red"
        android:textColor="@android:color/white"
        android:text="@string/log_in"
        android:layout_below="@id/password"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"/>


</RelativeLayout>