<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OrderSummary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:text="@string/order_summary"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/tv"
        android:layout_marginStart="10dp"/>

    <RelativeLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/category"
        android:layout_margin="10dp"
        android:background="@android:color/black"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:layout_marginStart="10dp"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/order_contents"
        android:textColor="@android:color/black"
        android:layout_below="@id/status"
        android:layout_marginStart="10dp"/>

    <RelativeLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/tv2"
        android:layout_margin="10dp"
        android:background="@android:color/black"/>


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_below="@id/line1"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_below="@id/title"
        android:text="@string/delivery_fee"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_below="@id/title"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"/>


    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/order_details"
        android:textColor="@android:color/black"
        android:layout_below="@id/tv4"
        android:layout_marginStart="10dp"/>

    <RelativeLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/tv3"
        android:layout_margin="10dp"
        android:background="@android:color/black"/>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/ordered_on"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/datePlaced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/l2"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/destination"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/deliveryAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/deliver"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_red"
        android:layout_below="@id/l3"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/deliver"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/completeDelivery"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_red"
        android:layout_below="@id/deliver"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/delivery_done"
        android:enabled="false"
        android:alpha="0"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_red"
        android:layout_below="@id/completeDelivery"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/cancel_order"
        android:textColor="@android:color/white" />


    </RelativeLayout>
</ScrollView>